End of Day Commit

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <p>The purpose of my personal site is to share my journey and allow you to see some of my work and how I develop personally.</p>
         <p>Each page is dedicated to a specific time in my life and my Blog pages allow me to share detial of significant projects I've worked on.</p>
         <p>You will also find links to my LinkedIn and GitHub pages where I share specific files and documents. As well as my Instagram where I share my hobbies and interests.</p>
-        <a href="XXXXXX" class="btn btn-outline"> Download My CV</a>
+        <a href="library/CV_Toby_Beevers.pdf" download class="btn btn-outline"> Download My CV</a>
       </div>
       <div class="showcase-form card">
         <img src="library\TobyBeeversHeadShot.jpg"  alt="Head shot of Toby Beevers">
