2nd Feb check point for changes

--- a/career_change.html
+++ b/career_change.html
@@ -61,6 +61,11 @@
         <div class="title">HEAD OF EUROPE DATA & IT</div>
         <div class="descr">As Head of Europe Data & IT at Entegra I have the technical and data led on 8 countries across Europe, reporting to the European CEO and working within the Europe Leadership team to direct our strategic decisions on Data and System development.</div>
     </li>
+    <li style="--accent-color:#6096BA">
+      <div class="date">2024</div>
+      <div class="title">DIR TECH & DATA</div>
+      <div class="descr">As Head of Europe Data & IT at Entegra I have the technical and data led on 8 countries across Europe, reporting to the European CEO and working within the Europe Leadership team to direct our strategic decisions on Data and System development.</div>
+  </li>
 </ul2>
 </main>
 
