--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h1>Toby Beevers</h1>
         <h2>Welcome To My Personal Website</h2>
         <p>The purpose of my personal site is to share my journey and allow you to see some of my work and how I develop personally.</p>
-        <p>Each page is dedicated to a specific time in my life and my Blog pages allow me to share detial of significant projects I've worked on.</p>
+        <p>Each page is dedicated to a specific time in my life and my Blog pages allow me to share detail of significant projects I've worked on.</p>
         <p>You will also find links to my LinkedIn and GitHub pages where I share specific files and documents. As well as my Instagram where I share my hobbies and interests.</p>
         <a href="library/Toby Beevers CV - Dir Tech and Data.pdf" download class="btn btn-outline"> Download My CV</a>
       </div>
