Update to Career Change 2/2

--- a/career_change.html
+++ b/career_change.html
@@ -38,33 +38,32 @@
     <li style="--accent-color:#274C77">
         <div class="date">2013</div>
         <div class="title">OPERATIONS MANAGER</div>
-        <div class="descr">Working with some of the most prestigious names in foodservice we offer an unparalleled service package to help you save money and streamline your purchasing and operating systems.</div>
+        <div class="descr">Collaborated directly with leading foodservice brands to deliver customised service solutions aimed at optimising purchasing processes, reducing operational costs, and enhancing efficiency.</div>
     </li>
     <li style="--accent-color:#6096BA">
         <div class="date">2014</div>
         <div class="title">ePSL ACCOUNT MANAGER</div>
-        <div class="descr">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos adipisci nobis nostrum vero nihil veniam.</div>
+        <div class="descr">Transitioned into the systems domain, providing operational support for customer systems. Responsibilities included system setup, user training, and seamless implementation to ensure client success.</div>
     </li>
     <li style="--accent-color:#8B8C89">
         <div class="date">2017</div>
         <div class="title">SYSTEMS PROJECT MANAGER</div>
-        <div class="descr">As Systems Project Manager I am the gateway between the Business and Technical Development Team, the role is similar to that of a Product Owner but extends slightly wider into managing budgets and deliverables like a PMO. </div>
+        <div class="descr">Acted as the primary liaison between business stakeholders and the technical development team. Functioned as a hybrid Product Owner and Project Manager, overseeing budgets, deliverables, and project timelines to drive successful outcomes.</div>
     </li>
     <li style="--accent-color:#274C77">
         <div class="date">2018</div>
         <div class="title">HEAD OF SYSTEMS UK</div>
-        <div class="descr">As Head of Systems at Entegra Europe I over see the day to day operation of our systems and business processes across the UK&I before taking responsibility for all 8 countries in 2020.</div>
-        <div class="descr">With 2 direct reports, and circa. 25 indirect reports I manage the relationship with our external development partner to deliver the annual technical roadmap within an Agile/Scrum framework.</div>
+        <div class="descr">Led the day-to-day operations of systems and business processes across the UK and Ireland, later expanding oversight to eight countries by 2020. Managed a team of two direct reports and approximately 25 indirect reports, while collaborating with external development partners to deliver the annual technical roadmap within an Agile/Scrum framework.</div>
     </li>
     <li style="--accent-color:#6096BA">
         <div class="date">2021</div>
         <div class="title">HEAD OF EUROPE DATA & IT</div>
-        <div class="descr">As Head of Europe Data & IT at Entegra I have the technical and data led on 8 countries across Europe, reporting to the European CEO and working within the Europe Leadership team to direct our strategic decisions on Data and System development.</div>
+        <div class="descr">Assumed leadership of technical and data development initiatives across eight European countries. Reported directly to the European CEO and contributed to strategic decision-making as part of the Europe Leadership Team, driving innovation and alignment in data and system development.</div>
     </li>
     <li style="--accent-color:#6096BA">
       <div class="date">2024</div>
       <div class="title">DIR TECH & DATA</div>
-      <div class="descr">As Head of Europe Data & IT at Entegra I have the technical and data led on 8 countries across Europe, reporting to the European CEO and working within the Europe Leadership team to direct our strategic decisions on Data and System development.</div>
+      <div class="descr">Advanced into my first director-level role, leveraging extensive experience to lead technology and data strategies, foster innovation, and deliver impactful business solutions.</div>
   </li>
 </ul2>
 </main>
