--- a/my_blog.html
+++ b/my_blog.html
@@ -66,9 +66,9 @@
       </div>
 
       <div class="card">
-        <h3 class="hc3">ADD TEXT</h3>
+        <h3 class="hc3">SO WHY DID I CHANGE CAREER</h3>
         <p>ADD TEXT</p>
-        <a href="ADD BLOG LINK" target="blank"> ADD BLOG</a>
+        <a href="../Blog Posts\Career_Change.html" target="blank"> ADD BLOG</a>
       </div>
 
       <div class="card">
