--- a/my_blog.html
+++ b/my_blog.html
@@ -68,7 +68,7 @@
       <div class="card">
         <h3 class="hc3">SO WHY DID I CHANGE CAREER</h3>
         <p>ADD TEXT</p>
-        <a href="../Blog Posts\Career_Change.html" target="blank"> ADD BLOG</a>
+        <a href="../Blog Posts/Career_Change.html" target="blank"> ADD BLOG</a>
       </div>
 
       <div class="card">
